k8s/dinks/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinks-web
  namespace: dinks
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels: { app: dinks-web }
  template:
    metadata:
      labels: { app: dinks-web }
    spec:
      imagePullSecrets: [{ name: ghcr }]
      containers:
        - name: web
          image: ghcr.io/therayquaza/home-cluster/dinks-web:v0.2.3
          imagePullPolicy: Always
          ports: [{ containerPort: 8080 }]
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile: { type: RuntimeDefault }
          volumeMounts:
            - { name: nginx-cache, mountPath: /var/cache/nginx }
            - { name: nginx-run, mountPath: /var/run }
            - { name: nginx-tmp, mountPath: /tmp }
          resources:
            requests: { memory: 32Mi, cpu: 25m }
            limits: { memory: 128Mi, cpu: 100m }
          readinessProbe:
            httpGet: { path: /, port: 8080 }
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 8080 }
            periodSeconds: 30
      volumes:
        - { name: nginx-cache, emptyDir: {} }
        - { name: nginx-run, emptyDir: {} }
        - { name: nginx-tmp, emptyDir: {} }
