k8s/dinks/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dinks
spec:
  clusterIP: None
  selector: { app: dinks-mongo }
  ports:
    - port: 27017
      targetPort: 27017
