k8s/dinks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dinks-backend
  namespace: dinks
spec:
  selector: { app: dinks-backend }
  ports:
    - port: 8080
      targetPort: 8080
